# wechat-rs

./: .travis.yml  Cargo.toml  README.md
examples/echo/: Cargo.toml
examples/echo/src/: main.rs
examples/media-upload/: Cargo.toml
examples/media-upload/src/: main.rs
src/: errors.rs  lib.rs  macros.rs  parser.rs  session.rs  types.rs  utils.rs  xmlutil.rs
src/client/: client.rs  customservice.rs  group.rs  menu.rs  misc.rs  mod.rs  qrcode.rs  semantic.rs  user.rs
src/client/api/: customservice.rs  group.rs  material.rs  media.rs  menu.rs  message.rs  misc.rs  mod.rs  qrcode.rs  semantic.rs  user.rs
src/client/request/: material.rs  message.rs  mod.rs  qrcode.rs
src/client/response/: customservice.rs  group.rs  material.rs  media.rs  mod.rs  qrcode.rs  user.rs
src/cryptography/: aes.rs  mod.rs  pkcs7.rs  prp.rs
src/events/: click.rs  location.rs  mod.rs  qualification_verify_success.rs  scan.rs  subscribe.rs  subscribe_scan.rs  unsubscribe.rs  view.rs
src/messages/: image.rs  link.rs  location.rs  mod.rs  shortvideo.rs  text.rs  unknown.rs  video.rs  voice.rs
src/replies/: articles.rs  image.rs  mod.rs  music.rs  text.rs  transfer_customer_service.rs  video.rs  voice.rs
tests/: lib.rs  test_client.rs  test_parser.rs  test_session.rs
tests/client/: mod.rs  test_client.rs  test_group.rs  test_menu.rs  test_misc.rs  test_qrcode.rs  test_semantic.rs  test_user.rs
