[package]
name = "wechat"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
description = "WeChat SDK for Rust"
repository = "https://github.com/messense/wechat-rs"
homepage = "https://github.com/messense/wechat-rs"
readme = "README.md"
keywords = ["wechat", "sdk"]
license = "MIT"

[dependencies]
log = "0.3"
url = "0.5"
sxd-document = "0.1"
sxd-xpath = "0.1"
rand = "0.3"
time = "0.1"
byteorder = "0.3"
rustc-serialize = "0.3"
hyper = "0.7"
jsonway = "0.3"
openssl = "0.7"
multipart = "0.3"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"

[features]
unstable = []
